# cyclops

./: .gitignore  README.md  copy_input_files.sh  descrição.txt
GreedySolution/: CMakeLists.txt
approximative_solutions/: .gitignore  CMakeLists.txt  tox.ini
approximative_solutions/cmake/: clean-cmake.cmake  clean-debug.cmake
approximative_solutions/input/clouds/: cluster2.vcl  cluster_3_toy_10_B.vcl  cluster_3_toy_15_B.vcl  cluster_3_toy_5_A.vcl  cluster_3_toy_5_C.vcl  cluster_CyberShake_100.xml.vcl  cluster_CyberShake_50.xml.vcl  cluster_Epigenomics_100.xml.vcl  cluster_Epigenomics_46.xml.vcl  cluster_Inspiral_100.xml.vcl  cluster_Montage_50.xml.vcl  cluster_Sipht_30.xml.vcl
approximative_solutions/input/conflict_graph/: CyberShake_50.xml.scg  Epigenomics_100.xml.scg  GENOME.d.11232795712.19.dax.scg  GENOME.d.1404099464.0.dax.scg  GENOME.d.2808198928.0.dax.scg  GENOME.d.2808198928.19.dax.scg  GENOME.d.351024866.0.dax.scg  GENOME.d.702049732.0.dax.scg  GENOME.n.300.19.dax.scg  GENOME.n.500.19.dax.scg  Inspiral_100.xml.scg  LIGO.n.300.19.dax.scg  LIGO.n.500.19.dax.scg  Montage_25.xml.scg  Montage_50.xml.scg  (+3 more)
approximative_solutions/log/: .wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200313-121438.9919.swp  wf_security_greedy.x.INFO  wf_security_greedy.x.dhcp-9-86-206-11.ralves.log.INFO.20200312-112516.29411  wf_security_greedy.x.dhcp-9-86-206-11.ralves.log.INFO.20200312-112543.29535  wf_security_greedy.x.dhcp-9-86-206-11.ralves.log.INFO.20200312-130538.9406  wf_security_greedy.x.dhcp-9-86-206-11.ralves.log.INFO.20200312-130650.9587  wf_security_greedy.x.dhcp-9-86-206-11.ralves.log.INFO.20200312-130912.9868  wf_security_greedy.x.dhcp-9-86-206-11.ralves.log.INFO.20200312-164940.501  wf_security_greedy.x.dhcp-9-86-206-11.ralves.log.INFO.20200312-171611.3457  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-171156.18570  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-171323.19107  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-205649.10483  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-210518.11316  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-210627.11527  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-210828.11822  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-210919.12150  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-211115.12365  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-211414.12688  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-211855.13210  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-212019.13582  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-212059.13721  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-212153.13920  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-213259.15666  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-213353.15832  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-213420.15903  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-213508.16074  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-213612.16288  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-220400.19002  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-220543.19238  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200310-225411.24327  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200311-202605.22536  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200311-202704.22737  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200311-203048.23262  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200311-204014.24208  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200313-084212.15820  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200313-084248.15934  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200313-093126.22280  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200313-093807.23208  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200313-094609.24196  wf_security_greedy.x.localhost.localdomain.ralves.log.INFO.20200313-094714.24525  (+11 more)
approximative_solutions/output/: .~lock.wf_security.csv#  .~lock.wf_security_1.csv#  wf_security.csv  wf_security_executions.csv
approximative_solutions/script/: run-batch-cplex.py  run-batch.py
approximative_solutions/shell/: run-cplex.sh  run-greedy-randomized-constructive-heuristic-2.sh  run-greedy-randomized-constructive-heuristic-3.sh  run-min-min-2.sh  run-min-min.sh  valgrind-min-min-2.sh
approximative_solutions/src/: main.cc  main.h
heuristic_and_exact_solutions/: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  EXPERIMENTOS-2.md  EXPERIMENTOS.md  Pipfile  Vagrantfile  _algorithms_test.txt  _instances.txt  _instances_Epigenomics.txt  _instances_desenv.txt  _instances_toys.txt  algorithms.txt  algorithms_desenv.txt  clean.sh  execute-Synthetic_10_B-grasp.sh  execute-Synthetic_5_A-cplex.sh  execute-Synthetic_5_A-grch.sh  execute-tests-for-sn.sh  execute-tests.sh  gcpModel.lp  instances.txt  instances_desenv.txt  model.lp  run-one.sh  saida.txt  test_specification.txt
heuristic_and_exact_solutions/notebooks/: GraficosLuis.ipynb  RodrigoSnV2.ipynb  Testes.ipynb  biblioteca.py  experiment.py  graficos.ipynb  graficos_grasp.ipynb  histograma.ipynb  results-Copy1.ipynb  results.ipynb
heuristic_and_exact_solutions/output/: wf_security_1.csv  wf_security_executions_1.csv
heuristic_and_exact_solutions/script/: run-batch.py  run-batch2.py  run-batch3.py
heuristic_and_exact_solutions/shell/: run-algorithm.sh  run-cplex.sh  run-grasp.sh  run-grasp2.sh  run-grasp3.sh  run-grch.sh  run-greedy-randomized-constructive-heuristic-2.sh  run-greedy-randomized-constructive-heuristic.sh  valgrind-greedy-ramdomized-constructive-heuristic-2.sh
heuristic_and_exact_solutions/src/: main.cc  main.h
(+596 files in other folders)
